--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -255,7 +255,6 @@ bind = $mainMod + SHIFT , F, fullscreen
 bind = $mainMod, B, exec, $browser
 bind = , Print, exec, hyprshot -m region
 bind = $mainMod + SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind = $mainMod , L, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -341,10 +340,10 @@ windowrulev2 = float, class:^(easyeffects)$
 windowrulev2 = float, class:^(blueman-manager)
 
 #Nautilus 
-windowrulev2 = float, class:^(dolphin)
+windowrulev2 = float, class:^(org.kde.dolphin)
 
 
 windowrulev2 = center, class:^(pavucontrol)$
 windowrulev2 = center, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = center, class:^(blueman-manager)$
-windowrulev2 = center, class:^(dolphin)$
+windowrulev2 = center, class:^(org.kde.dolphin)$
